# mapachev1

./: .env  AGENT_UPGRADE_SUMMARY.md  ARCHITECTURE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  GAP_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  INTELLIGENCE_SYSTEM_DEPLOYED.md  MISSION_COMPLETE.md  QUICKSTART.md  README.md  _discovery_results.txt  deploy.sh  pyproject.toml  test_optimization.py
.github/workflows/: saas-agents-deploy.yml
agents/saas_agents/: README.md  STATUS_REPORT.md  generation_summary.json  saas_tools_manifest.yaml
config/: golden_tasks.yaml  observability.yaml  optimization.yaml  quality_gates.yaml
deployment/local/: README.md  collect_metrics.sh  integrate_pilot_agents.sh  setup_local.sh  test_pilot_agents.sh  validate_improvements.sh
deployment/production/: deploy_blue_green.sh  deploy_canary.sh  monitor_production.sh  rollback_production.sh  setup_production.sh
deployment/staging/: README.md  deploy_pilot_agents.sh  rollback_staging.sh  run_smoke_tests.sh  setup_staging.sh  validate_staging.sh
examples/: README.md  before_after_agent.py  multi_agent_workflow.py
knowledge_corpus/: knowledge_manifest.json
knowledge_corpus/best_practices/: adk_agent_patterns.json  adk_best_practices.json
knowledge_corpus/docs/: adk_agent_types.md  adk_code_examples.md  adk_vertex_ai_deployment.md  overview.html
mapache-a2a-integration/: .env.example  .gitignore  README.md  requirements.txt
mapache-a2a-integration/agent_cards/: account_executive_1_1_1.json  account_executive_1_1_2.json  account_executive_1_1_3.json  account_executive_1_2_1.json  account_executive_1_2_2.json  account_executive_1_2_3.json  account_executive_2_1_1.json  account_executive_2_1_2.json  account_executive_2_1_3.json  account_executive_2_2_1.json  account_executive_2_2_2.json  account_executive_2_2_3.json  account_executive_3_1_1.json  account_executive_3_1_2.json  account_executive_3_1_3.json  account_executive_3_2_1.json  account_executive_3_2_2.json  account_executive_3_2_3.json  accountant_1.json  accountant_10.json  accountant_2.json  accountant_3.json  accountant_4.json  accountant_5.json  accountant_6.json  accountant_7.json  accountant_8.json  accountant_9.json  analytics_manager_1.json  analytics_manager_2.json  appsec_engineer_1.json  appsec_engineer_2.json  appsec_engineer_3.json  appsec_engineer_4.json  brand_manager.json  brand_specialist_1.json  brand_specialist_2.json  cash_manager.json  ceo.json  cfo.json  (+338 more)
mapache-a2a-integration/docs/: architecture.md
mapache-a2a-integration/examples/: hiring_workflow.py  product_launch.py  sales_to_finance_approval.py
mapache-a2a-integration/scripts/: deploy_agent.sh  generate_agent_cards.py  populate_registry.py  start_local_demo.sh
mapache-a2a-integration/tests/: __init__.py  conftest.py  test_base_agent.py  test_registry.py
mapache-agent-improvements/: README.md
mapache-agent-improvements/config/: context_engineering.yaml
mapache-agent-improvements/examples/: context_aware_agent.py
mapache-frontend/: .dockerignore  .env.example  DEPLOYMENT_GCP.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  jest.config.js  next.config.js  package-lock.json  package.json
mapache-frontend/tests/: setup.ts
mapachev1/: BUILD_SUMMARY.md  CICD_PIPELINES_SUMMARY.md  CICD_SETUP.md  Dockerfile  FILES_CREATED.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  README.md  generate_agents.py  pyproject.toml  test_imports.py
mapachev1/.cloudbuild/: README.md  pr.yaml  prod.yaml  staging.yaml
mapachev1/app/: agent.py
mapachev1/deployment/: README.md
opportunity-agents/: .env.example  README.md
opportunity-agents/deployment/: cloudbuild.yaml  deploy.sh
opportunity-agents/docs/: A2A_SPEC.md  API.md  USAGE.md
opportunity-agents/opportunity-agent/: .env.example  agent.yaml  main.py  requirements.txt
opportunity-agents/orchestrator-agent/: .env.example  agent.yaml  main.py  requirements.txt
opportunity-agents/shared/: __init__.py  a2a_client.py  models.py  utils.py
opportunity-agents/validation-agent/: .env.example  agent.yaml  main.py  requirements.txt
python/agents/: AGENT_UPGRADE_COMPLETE.md  START_HERE.sh  agent_001_ceo_root_coordinator.py  agent_002_coo_operations_coordinator.py  agent_003_cfo_financial_director.py  agent_004_cto_technology_director.py  agent_005_cio_information_director.py  agent_006_cmo_marketing_director.py  agent_007_chro_human_resources_director.py  agent_008_cso_sales_director.py  agent_009_cpo_product_director.py  agent_010_cdo_data_director.py  agent_011_ciso_security_director.py  agent_012_cco_customer_director.py  agent_013_general_counsel.py  agent_014_cro_revenue_director.py  agent_015_cco_compliance_director.py  agent_016_vp_corporate_strategy.py  agent_017_vp_investor_relations.py  agent_018_vp_corporate_communications.py  agent_019_vp_business_development.py  agent_020_vp_enterprise_architecture.py  agent_021_vp_financial_planning.py  agent_022_controller.py  agent_023_treasurer.py  agent_024_vp_tax.py  agent_025_vp_internal_audit.py  agent_026_director_accounts_payable.py  agent_027_director_accounts_receivable.py  agent_028_director_financial_reporting.py  agent_029_director_procurement.py  agent_030_senior_financial_analyst.py  agent_031_budget_manager.py  agent_032_cost_accountant.py  agent_033_revenue_accountant.py  agent_034_tax_analyst.py  agent_035_treasury_analyst.py  agent_036_internal_auditor.py  agent_037_ap_specialist.py  agent_038_ar_specialist.py  (+475 more)
scripts/: 01_collect_adk_knowledge.py  02_upload_to_gcs.py  03_create_file_search_corpus.py  __init__.py
src/coordination/: __init__.py  a2a_protocol.py  message_broker.py  orchestration_patterns.py  primitives.py
src/deployment/: README.md  __init__.py  blue_green.py  canary.py  example_usage.py  rollback.py  smoke_tests.py  test_api.py
src/evaluation/: executor.py  golden_tasks.py  quality_gates.py  validator.py
src/memory/: __init__.py  consolidation.py  patterns.py  session_memory.py  vector_memory.py
src/observability/: README.md  __init__.py  dashboards.py  distributed_tracing.py  metrics.py  (+2 more)
(+7281 files in other folders)
